# moneymaker

./: .gitignore  README.md  alerts.json  api.py  cohere.txt  pinecone_quickstart.ipynb  requirements.txt  scratch.ipynb  setup.py  stock_universe.xlsx  ticker.py  ticker_test.py
app/: __init__.py  api.py  stock_universe.xlsx  ticker.py
dashboards/: market_screen.json  triple_screen.json  watch_list_etf.json  watch_list_stocks.json
grafana/: custom.ini  install-grafana.sh  install-plugins.sh  start-grafana.sh
grafana/provisioning/alerting/: alerts.yaml  sample.yaml
grafana/provisioning/dashboard_json/Finance/: ai_stock_recommender.json  market_screen.json  triple_screen.json  watch_list_etf.json  watch_list_stocks.json
grafana/provisioning/dashboards/: dashboards.yaml
grafana/provisioning/datasources/: datasources.yaml
grafana/provisioning/notifiers/: alertmgr.yaml
jupyter/: Cohere.ipynb  HuggingFace.ipynb  OpenAI .ipynb
moneymaker/: __init__.py  api.py  pinecone_analytics.py  pinecone_quickstart.ipynb  requirements.txt  stock_universe.xlsx  ticker_analytics.py  ticker_analytics_test.py  ticker_test.py
python/: api.py  pinecone_analytics.py  pinecone_analytics_test.py  pyproject.toml  recommendation-data.jsonl  requirements.txt  ticker_analytics.py
