[tool.poetry]
name = "ticker-analytics"
version = "0.1.0"
description = ""
authors = ["cfossguy <cfossguy@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.1"
logfmter = "^0.0.6"
pandas = "^1.4.2"
prometheus_flask_exporter = "^0.20.3"
python-dotenv = "^0.21.0"
SQLAlchemy = "^1.4.27"
polygon-api-client = "^1.13.7"
openpyxl = "^3.0.10"
psycopg2-binary = "^2.9.5"
pandarallel = "^1.6.4"
scipy = "^1.4.1"
openai = "^0.27.6"
flask_cors = "^4.0.0"
yfinance= "^0.2.36"
setuptools = "^70.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
